syntax = "proto3";

option go_package = "github.com/vainsark/monitoring/loadmonitor_proto";

package loadmonitor;

import "google/protobuf/timestamp.proto"; 

service LoadMonitor {
    rpc LoadData (Metrics) returns (MetricsAck);
}
service UserInput {
    rpc ScanParams (UserParams) returns (UserParamsAck);
}

message Metric {
    string DataName = 1;
    double Data = 2;
    google.protobuf.Timestamp Timestamp = 3;
}

message Metrics {
    string DeviceId = 1;
    int32 agentId = 2;
    repeated Metric Metrics = 3;
}

message MetricsAck {
    int32 Ack = 1;
    int32 ScnFreq = 2;
    int32 TransMult = 3;
}

message UserParams {
    string DeviceId = 1;
    int32 AgentId = 2;
    int32 ScnFreq = 3;
    int32 TransMult = 4;
}
message UserParamsAck {
    int32 Ack = 1;
}